MKx PLAN:
- mechanism for text alignment in text files that also works with excel

MK7 MOD3 CHANGES: more docstrings
MK7 MOD2 CHANGES: renamed functions in medium and high level api
MK7 MOD1 CHANGES: moved changelog to separate file

MK7 CHANGES:
- ability to split long columns into multiple rows
- meta as attributes
- default value for meta items and rows

MK6 MOD3 CHANGES: fix - table with no metadata
MK6 MOD2 CHANGES: column name attribute: lowercase + spaces to underscores, renamed tab_meta_rows to split
MK6 MOD1 CHANGES: fixed test / example

MK6 CHANGES:
 - list support in table metadata
 - row.first and row.last flags in table interface
 - reading from files and paths
 - high level interface for tables
 - high level interfece for rows with column metadata
 - medium level interface for metadata
 - parse changed to generator
 
MK5 CHANGES:
- spliting long columns into multiple rows NOT AVAILABLE - requires rework
- tail option

EX4 CHANGES:
- fixed cnt argument
- tsv format, multiple tabulators no longer treated as one
- comments replaced by selectors 
- lines are no longer stripped (only rstripped)
- fields stripping can now be turned off
- removed export function (not needed - dash files can now be edited in excel)

EX3 CHANGES:
- ability to split long columns into multiple rows
- pipe and star characters no longer a comment
- export (to xls) function

MK2 CHANGES:
- text after section name -> section hint (one line description)
- dedent code before splitting it into sections
- ability to select lines based on first character (to pass metadata in comments)
- default value changed from None to empty string 

#####################################################################

TODO empty vs null